[package]
name = "surged"
description = "Kubernetes operator for exposing services via headless"
license = "Apache-2.0"
version = "1.0.5"
edition = "2021"
repository = "https://github.com/Jc2k/surge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.97.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
futures = "0.3.31"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features=["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.18"
thiserror = "1.0.64"
anyhow = "1.0.94"
serde = { version = "1.0.217", features = ["derive"] }
tokio-util = "0.7.13"
url = "2.5.2"
reqwest = { version = "0.12.9", default-features=false, features = ["rustls-tls", "json"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
