[package]
name = "surged"
description = "Kubernetes operator for exposing services via headless"
license = "Apache-2.0"
version = "1.0.5"
edition = "2021"
repository = "https://github.com/Jc2k/surge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
futures = "0.3.31"
serde_json = "1.0.138"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.11"
anyhow = "1.0.95"
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = "0.7.13"
url = "2.5.4"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
